[package]
name = "wechat-multi"
version = "0.1.1"
edition = "2021"
authors = ["hangj <guijie.han@gmail.com>"]
readme = "README.md"
description = "Mac 版微信多开"
license = "MIT"
repository = "https://github.com/hangj/wechat-multi"
documentation = "https://docs.rs/wechat-multi/"
exclude = ["/.github/*", "/.gitattributes", "/appveyor.yml", "/Changelog.md", "/clippy.toml", "/codecov.yml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
disarm64 = "0.1.13"
iced-x86 = "1.21.0"
mach_object = "0.1.17"
memmap = "0.7.0"


[patch.crates-io]
disarm64 = {git = "https://github.com/hangj/disarm64", rev = "6a414ca17cac0797bda3933a1dffe6369187d8e7"}
